--- a/examples/delta_compression/Cargo.toml
+++ b/examples/delta_compression/Cargo.toml
@@ -17,6 +17,7 @@ client = ["lightyear_examples_common/client", "gui"]
 server = ["lightyear_examples_common/server"]
 gui = ["lightyear_examples_common/gui"]
 metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]
+steam = ["lightyear_examples_common/steam"]
 
 [dependencies]
 lightyear_examples_common.workspace = true
