--- a/examples/lobby/Cargo.toml
+++ b/examples/lobby/Cargo.toml
@@ -14,13 +14,14 @@ publish = false
 [features]
 default = ["lightyear_examples_common/websocket"]
 client = [
-  "lightyear_examples_common/server",
-  "lightyear_examples_common/client",
-  "gui",
+    "lightyear_examples_common/server",
+    "lightyear_examples_common/client",
+    "gui",
 ]
 server = ["lightyear_examples_common/server"]
 gui = ["lightyear_examples_common/gui"]
 metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]
+steam = ["lightyear_examples_common/steam"]
 
 [dependencies]
 lightyear_examples_common.workspace = true
