--- a/examples/spaceships/Cargo.toml
+++ b/examples/spaceships/Cargo.toml
@@ -17,6 +17,7 @@ metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]
 tls = ["dep:bevygap_client_plugin"]
 bevygap_client = ["lightyear_examples_common/bevygap_client", "client"]
 bevygap_server = ["lightyear_examples_common/bevygap_server", "server"]
+steam = ["lightyear_examples_common/steam"]
 
 [dependencies]
 lightyear_examples_common.workspace = true
