--- a/examples/avian_3d_character/Cargo.toml
+++ b/examples/avian_3d_character/Cargo.toml
@@ -35,6 +35,7 @@ avian3d = { workspace = true, features = [
 anyhow.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
+serde.workspace = true
 bevy.workspace = true
 rand.workspace = true
 metrics-exporter-prometheus = { workspace = true, optional = true }
