--- a/examples/spaceships/Cargo.toml
+++ b/examples/spaceships/Cargo.toml
@@ -31,6 +31,7 @@ avian2d = { workspace = true, features = [
     "serialize",
 ] }
 lightyear = { workspace = true, features = ["leafwing", "avian2d"] }
+serde.workspace = true
 anyhow.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
