--- a/examples/auth/Cargo.toml
+++ b/examples/auth/Cargo.toml
@@ -12,8 +12,9 @@ license = "MIT OR Apache-2.0"
 publish = false
 
 [features]
+steam = ["lightyear_examples_common/steam"]
 default = [
-    "lightyear_examples_common/steam",
+    "tokio/net",
     "lightyear_examples_common/websocket",
 ]
 client = ["lightyear_examples_common/client", "gui"]
@@ -29,6 +30,7 @@ async-compat.workspace = true
 anyhow.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
+serde.workspace = true
 bevy.workspace = true
 rand.workspace = true
 metrics-exporter-prometheus = { workspace = true, optional = true }
