add missing dependencies, add avian3d simple gamepad support

--- a/benches/bitcode_packing/Cargo.toml
+++ b/benches/bitcode_packing/Cargo.toml
@@ -9,6 +9,10 @@ license.workspace = true
 
 [dependencies]
 divan = "0.1.17"
+rand_chacha = "0.3.1"
+bitcode = "0.6.3"
+lz4_flex.workspace = true
+rand.workspace = true
 
 [lints]
 workspace = true
