--- a/examples/example_list.env
+++ b/examples/example_list.env
@@ -2,4 +2,4 @@
 #
 # This list is used by the build_wasm.sh script, and is passed
 # as a docker build arg when using Dockerfile.server
-example_list=simple_box,spaceships
+example_list=simple_box,spaceships,avian_3d_character
