--- a/examples/avian_3d_character/Cargo.toml
+++ b/examples/avian_3d_character/Cargo.toml
@@ -17,13 +17,13 @@ bevygap_server = ["lightyear_examples_common/bevygap_server", "server"]
 steam = ["lightyear_examples_common/steam"]
 
 [dependencies]
-lightyear_examples_common.workspace = true
+lightyear_examples_common = { workspace = true, features = ["websocket"] }
 lightyear = { workspace = true, features = [
   "leafwing",
   "avian3d",
   "websocket",
 ] }
-leafwing-input-manager.workspace = true
+leafwing-input-manager = { workspace = true, default-features = false, features = ["keyboard", "gamepad"] }
 
 avian3d = { workspace = true, features = [
   "3d",
