--- a/examples/avian_3d_character/Cargo.toml
+++ b/examples/avian_3d_character/Cargo.toml
@@ -23,7 +23,7 @@ lightyear = { workspace = true, features = [
   "avian3d",
   "websocket",
 ] }
-leafwing-input-manager.workspace = true
+leafwing-input-manager = { workspace = true, default-features = false, features = ["keyboard", "gamepad"] }
 
 avian3d = { workspace = true, features = [
   "3d",
