--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -18,18 +18,19 @@ publish = true
 big_messages = []
 trace = []
 metrics = [
-  "dep:metrics",
-  "metrics-util",
-  "metrics-tracing-context",
-  "metrics-exporter-prometheus",
+    "dep:metrics",
+    "dep:metrics-util",
+    "dep:metrics-tracing-context",
+    "dep:metrics-exporter-prometheus",
 ]
+visualizer = ["dep:bevy_metrics_dashboard", "metrics"]
 mock_time = ["dep:mock_instant"]
 webtransport = [
-  "dep:wtransport",
-  "dep:xwt-core",
-  "dep:xwt-web",
-  "dep:web-sys",
-  "dep:wasm-bindgen-futures",
+    "dep:wtransport",
+    "dep:xwt-core",
+    "dep:xwt-web",
+    "dep:web-sys",
+    "dep:wasm-bindgen-futures",
 ]
 leafwing = ["dep:leafwing-input-manager"]
 # NOTE: because lightyear doesn't enable any features of avian by default, your crate must
@@ -37,11 +38,11 @@ leafwing = ["dep:leafwing-input-manager"]
 avian2d = ["dep:avian2d"]
 avian3d = ["dep:avian3d", "avian3d/3d"]
 websocket = [
-  "dep:tokio-tungstenite",
-  "dep:futures-util",
-  "dep:web-sys",
-  "dep:wasm-bindgen",
-  "dep:wasm-bindgen-futures",
+    "dep:tokio-tungstenite",
+    "dep:futures-util",
+    "dep:web-sys",
+    "dep:wasm-bindgen",
+    "dep:wasm-bindgen-futures",
 ]
 steam = ["dep:steamworks"]
 track_change_detection = ["bevy/track_change_detection"]
@@ -98,6 +99,10 @@ metrics = { workspace = true, optional = true }
 metrics-util = { workspace = true, optional = true }
 metrics-tracing-context = { workspace = true, optional = true }
 metrics-exporter-prometheus = { workspace = true, optional = true }
+
+# debug ui
+bevy_egui = { workspace = true, optional = true }
+bevy_metrics_dashboard = { workspace = true, optional = true }
 
 # bevy
 bevy.workspace = true
