--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [workspace]
 resolver = "2"
 members = [
-  "lightyear",
-  "macros",
-  # internal
-  "benches/*",
-  "examples/*",
+    "lightyear",
+    "macros",
+    # internal
+    "benches/*",
+    "examples/*",
 ]
 default-members = ["lightyear"]
 exclude = ["examples/certificates"]
@@ -59,6 +59,7 @@ thiserror = "2.0.3"
 seahash = "4.1.0"
 zstd = "0.13.1"
 
+
 # serialization
 
 bincode = { version = "2.0.0-rc.3", features = ["serde"] }
@@ -80,8 +81,8 @@ lightyear_macros = { version = "0.18.0", path = "./macros" }
 tracing = "0.1.40"
 tracing-log = "0.2.0"
 tracing-subscriber = { version = "0.3.17", features = [
-  "registry",
-  "env-filter",
+    "registry",
+    "env-filter",
 ] }
 
 # server
@@ -94,8 +95,9 @@ metrics = "0.24"
 metrics-util = "0.18"
 metrics-tracing-context = "0.17"
 metrics-exporter-prometheus = { version = "0.16", default-features = false, features = [
-  "http-listener",
+    "http-listener",
 ] }
+
 
 
 # compression
@@ -109,8 +111,8 @@ futures-util = "0.3.30"
 # we don't need any tokio features, we use only use the tokio channels
 
 tokio = { version = "1.36", features = [
-  "sync",
-  "macros",
+    "sync",
+    "macros",
 ], default-features = false }
 futures = "0.3.30"
 async-compat = "0.2.3"
@@ -120,9 +122,9 @@ async-channel = "2.2.0"
 
 steamworks = "0.11"
 wtransport = { version = "=0.5.0", features = [
-  "quinn",
-  "self-signed",
-  "dangerous-configuration",
+    "quinn",
+    "self-signed",
+    "dangerous-configuration",
 ] }
 tokio-tungstenite = { version = "0.23.0", features = ["connect", "handshake"] }
 
@@ -131,21 +133,21 @@ tokio-tungstenite = { version = "0.23.0", features = ["connect", "handshake"] }
 
 console_error_panic_hook = "0.1.7"
 web-sys = { version = "0.3", features = [
-  "Document",
-  "WebTransport",
-  "WebTransportHash",
-  "WebTransportOptions",
-  "WebTransportBidirectionalStream",
-  "WebTransportSendStream",
-  "WebTransportReceiveStream",
-  "ReadableStreamDefaultReader",
-  "WritableStreamDefaultWriter",
-  "WebTransportDatagramDuplexStream",
-  "WebSocket",
-  "CloseEvent",
-  "ErrorEvent",
-  "MessageEvent",
-  "BinaryType",
+    "Document",
+    "WebTransport",
+    "WebTransportHash",
+    "WebTransportOptions",
+    "WebTransportBidirectionalStream",
+    "WebTransportSendStream",
+    "WebTransportReceiveStream",
+    "ReadableStreamDefaultReader",
+    "WritableStreamDefaultWriter",
+    "WebTransportDatagramDuplexStream",
+    "WebSocket",
+    "CloseEvent",
+    "ErrorEvent",
+    "MessageEvent",
+    "BinaryType",
 ] }
 
 # latest version that still uses bevy 0.14:
@@ -153,7 +155,7 @@ bevy_web_keepalive = "0.3.4"
 
 futures-lite = "2.1.0"
 getrandom = { version = "0.2.11", features = [
-  "js", # feature 'js' is required for wasm
+    "js", # feature 'js' is required for wasm
 ] }
 xwt-core = "0.6"
 xwt-web = "0.15.0"
@@ -171,19 +173,19 @@ approx = "0.5.1"
 # (we add back features needed for gui clients if desired)
 
 bevy = { version = "0.15", default-features = false, features = [
-  "multi_threaded",
-  "bevy_state",
-  "serialize",
-  "bevy_asset",
-  "bevy_state",
-  "bevy_color",
-  "multi_threaded",
-  "sysinfo_plugin",
+    "multi_threaded",
+    "bevy_state",
+    "serialize",
+    "bevy_asset",
+    "bevy_state",
+    "bevy_color",
+    "multi_threaded",
+    "sysinfo_plugin",
 ] }
 
 # input
 leafwing-input-manager = { version = "0.16", default-features = false, features = [
-  "keyboard",
+    "keyboard",
 ] }
 
 # physics
@@ -192,18 +194,22 @@ avian3d = { version = "0.2", default-features = false }
 
 
 # gui debug ui
-bevy-inspector-egui = { version = "0.28", default-features = false, features = [
-  "bevy_pbr",
-  "bevy_image",
-  "bevy_render",
-  "egui_open_url",
+# TODO: switch to the released version once inspector upgrades to bevy_egui 0.32
+bevy-inspector-egui = { git = "https://github.com/blip-radar/bevy-inspector-egui.git", branch = "egui-0.30", default-features = false, features = [
+    "bevy_pbr",
+    "bevy_image",
+    "bevy_render",
+    "egui_open_url",
 ] }
-bevy_egui = { version = "0.31", default-features = false, features = [
-  "open_url",
-  "default_fonts",
-  "render",
+bevy_egui = { version = "0.32", default-features = false, features = [
+    "open_url",
+    "default_fonts",
+    "render",
 ] }
-egui_extras = "=0.29"
+# TODO: switch to the released version once dashboard upgrades to bevy 0.15
+bevy_metrics_dashboard = { git = "https://github.com/cBournhonesque/bevy_metrics_dashboard.git", branch = "cb/0.15" }
+egui_extras = "0.30"
+
 
 # bevygap for deploying on Edgegap
 bevygap_server_plugin = { version = "0.3.1" }
