--- a/examples/auth/Cargo.toml
+++ b/examples/auth/Cargo.toml
@@ -18,6 +18,7 @@ client = ["lightyear_examples_common/client", "gui"]
 server = ["lightyear_examples_common/server"]
 gui = ["lightyear_examples_common/gui"]
 metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]
+visualizer = ["lightyear_examples_common/visualizer", "gui"]
 
 [dependencies]
 lightyear_examples_common.workspace = true
