--- a/examples/avian_3d_character/Cargo.toml
+++ b/examples/avian_3d_character/Cargo.toml
@@ -15,22 +15,23 @@ metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]
 bevygap_client = ["lightyear_examples_common/bevygap_client", "client"]
 bevygap_server = ["lightyear_examples_common/bevygap_server", "server"]
 steam = ["lightyear_examples_common/steam"]
+visualizer = ["lightyear_examples_common/visualizer", "gui"]
 
 [dependencies]
 lightyear_examples_common.workspace = true
 lightyear = { workspace = true, features = [
-  "leafwing",
-  "avian3d",
-  "websocket",
+    "leafwing",
+    "avian3d",
+    "websocket",
 ] }
 leafwing-input-manager = { workspace = true, default-features = false, features = ["keyboard", "gamepad"] }
 
 avian3d = { workspace = true, features = [
-  "3d",
-  "f32",
-  "parry-f32",
-  "parallel",
-  "serialize",
+    "3d",
+    "f32",
+    "parry-f32",
+    "parallel",
+    "serialize",
 ] }
 anyhow.workspace = true
 tracing.workspace = true
@@ -40,7 +41,7 @@ bevy.workspace = true
 rand.workspace = true
 metrics-exporter-prometheus = { workspace = true, optional = true }
 bevygap_client_plugin = { workspace = true, optional = true, features = [
-  "matchmaker-tls",
+    "matchmaker-tls",
 ] }
 
 [target."cfg(target_family = \"wasm\")".dependencies]
