--- a/examples/avian_physics/Cargo.toml
+++ b/examples/avian_physics/Cargo.toml
@@ -12,23 +12,24 @@ server = ["lightyear_examples_common/server"]
 gui = ["lightyear_examples_common/gui"]
 steam = ["lightyear_examples_common/steam"]
 metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]
+visualizer = ["lightyear_examples_common/visualizer", "gui"]
 
 [dependencies]
 lightyear_examples_common.workspace = true
 lightyear = { workspace = true, features = [
-  "steam",
-  "websocket",
-  "leafwing",
-  "avian2d",
+    "steam",
+    "websocket",
+    "leafwing",
+    "avian2d",
 ] }
 
 leafwing-input-manager.workspace = true
 avian2d = { workspace = true, features = [
-  "2d",
-  "f32",
-  "parry-f32",
-  "parallel",
-  "serialize",
+    "2d",
+    "f32",
+    "parry-f32",
+    "parallel",
+    "serialize",
 ] }
 serde.workspace = true
 anyhow.workspace = true
