--- a/examples/common/Cargo.toml
+++ b/examples/common/Cargo.toml
@@ -19,32 +19,33 @@ server = []
 client = ["gui"]
 bevygap_client = ["client", "dep:bevygap_client_plugin"]
 bevygap_server = ["server", "dep:bevygap_server_plugin"]
+visualizer = ["gui", "lightyear/visualizer"]
 
 # this serves as a bit of "workspace-hack" crate by enabling all bevy features needed by examples.
 # you can read about workspace-hack crates here: https://docs.rs/cargo-hakari/latest/cargo_hakari/about/index.html
 # even though we're not using cargo-hakari.
 
 gui = [
-  "dep:bevy-inspector-egui",
-  "bevy/bevy_asset",
-  "bevy/bevy_render",
-  "bevy/bevy_pbr",
-  "bevy/bevy_scene",
-  "bevy/bevy_core_pipeline",
-  "bevy/bevy_gizmos",
-  "bevy/tonemapping_luts",
-  "bevy/smaa_luts",
-  "bevy/default_font",
-  "bevy/png",
-  "bevy/hdr",
-  "bevy/x11",
-  "bevy/webgl2",
-  "bevy/bevy_winit",
-  "bevy/bevy_picking",
-  "bevy/bevy_sprite",
-  "bevy/bevy_text",
-  "bevy/bevy_ui",
-  "bevy/bevy_window",
+    "dep:bevy-inspector-egui",
+    "bevy/bevy_asset",
+    "bevy/bevy_render",
+    "bevy/bevy_pbr",
+    "bevy/bevy_scene",
+    "bevy/bevy_core_pipeline",
+    "bevy/bevy_gizmos",
+    "bevy/tonemapping_luts",
+    "bevy/smaa_luts",
+    "bevy/default_font",
+    "bevy/png",
+    "bevy/hdr",
+    "bevy/x11",
+    "bevy/webgl2",
+    "bevy/bevy_winit",
+    "bevy/bevy_picking",
+    "bevy/bevy_sprite",
+    "bevy/bevy_text",
+    "bevy/bevy_ui",
+    "bevy/bevy_window",
 ]
 
 [dependencies]
@@ -60,6 +61,8 @@ bevy.workspace = true
 bevygap_client_plugin = { workspace = true, optional = true }
 bevygap_server_plugin = { workspace = true, optional = true }
 bevy-inspector-egui = { workspace = true, optional = true }
+bevy_metrics_dashboard = { workspace = true, optional = true }
+bevy_egui = { workspace = true, optional = true }
 
 [target."cfg(target_family = \"wasm\")".dependencies]
 web-sys = { workspace = true, features = ["Window", "Location"] }
