--- a/examples/avian_physics/Cargo.toml
+++ b/examples/avian_physics/Cargo.toml
@@ -12,6 +12,7 @@ server = ["lightyear_examples_common/server"]
 gui = ["lightyear_examples_common/gui"]
 steam = ["lightyear_examples_common/steam"]
 metrics = ["lightyear/metrics", "dep:metrics-exporter-prometheus"]
+visualizer = ["lightyear_examples_common/visualizer", "gui"]
 
 [dependencies]
 lightyear_examples_common.workspace = true
