--- a/examples/simple_box/Cargo.toml
+++ b/examples/simple_box/Cargo.toml
@@ -12,7 +12,7 @@ license = "MIT OR Apache-2.0"
 publish = false
 
 [features]
-default = ["lightyear_examples_common/websocket"]
+default = ["client", "server", "gui", "lightyear_examples_common/default"]
 client = ["lightyear_examples_common/client", "gui"]
 server = ["lightyear_examples_common/server"]
 gui = ["lightyear_examples_common/gui"]
@@ -35,7 +35,7 @@ rand.workspace = true
 metrics-exporter-prometheus = { workspace = true, optional = true }
 bevy-inspector-egui = { workspace = true, optional = true }
 bevygap_client_plugin = { workspace = true, optional = true, features = [
-  "matchmaker-tls",
+    "matchmaker-tls",
 ] }
 
 [lints]
