--- a/examples/interest_management/Cargo.toml
+++ b/examples/interest_management/Cargo.toml
@@ -12,7 +12,7 @@ license = "MIT OR Apache-2.0"
 publish = false
 
 [features]
-default = ["lightyear_examples_common/websocket"]
+default = ["client", "server", "gui", "lightyear_examples_common/default"]
 client = ["lightyear_examples_common/client", "gui"]
 server = ["lightyear_examples_common/server"]
 gui = ["lightyear_examples_common/gui"]
