--- a/examples/replication_groups/Cargo.toml
+++ b/examples/replication_groups/Cargo.toml
@@ -13,7 +13,7 @@ publish = false
 
 
 [features]
-default = ["lightyear_examples_common/websocket"]
+default = ["client", "server", "gui", "lightyear_examples_common/default"]
 client = ["lightyear_examples_common/client", "gui"]
 server = ["lightyear_examples_common/server"]
 gui = ["lightyear_examples_common/gui"]
