--- a/examples/spaceships/Cargo.toml
+++ b/examples/spaceships/Cargo.toml
@@ -2,14 +2,14 @@
 name = "spaceships"
 version.workspace = true
 authors = [
-  "Charles Bournhonesque <charlesbour@gmail.com>",
-  "Richard Jones <rj@metabrew.com>",
+    "Charles Bournhonesque <charlesbour@gmail.com>",
+    "Richard Jones <rj@metabrew.com>",
 ]
 edition.workspace = true
 publish = false
 
 [features]
-default = ["lightyear_examples_common/websocket"]
+default = ["client", "server", "gui", "lightyear_examples_common/default"]
 client = ["lightyear_examples_common/client", "gui"]
 server = ["lightyear_examples_common/server"]
 gui = ["lightyear_examples_common/gui"]
@@ -25,11 +25,11 @@ lightyear_examples_common.workspace = true
 metrics-exporter-prometheus = { workspace = true, optional = true }
 leafwing-input-manager = { workspace = true, features = ["keyboard", "mouse"] }
 avian2d = { workspace = true, features = [
-  "2d",
-  "f32",
-  "parry-f32",
-  "parallel",
-  "serialize",
+    "2d",
+    "f32",
+    "parry-f32",
+    "parallel",
+    "serialize",
 ] }
 lightyear = { workspace = true, features = ["leafwing", "avian2d"] }
 serde.workspace = true
@@ -39,7 +39,7 @@ tracing-subscriber.workspace = true
 bevy.workspace = true
 rand.workspace = true
 bevygap_client_plugin = { workspace = true, optional = true, features = [
-  "matchmaker-tls",
+    "matchmaker-tls",
 ] }
 
 [lints]
