fix examples and update readme

--- a/examples/avian_3d_character/Cargo.toml
+++ b/examples/avian_3d_character/Cargo.toml
@@ -7,6 +7,7 @@ publish = false
 
 [features]
 default = ["client", "server", "gui", "lightyear_examples_common/default"]
+websocket = ["lightyear_examples_common/websocket"]
 client = ["lightyear_examples_common/client", "gui"]
 server = ["lightyear_examples_common/server"]
 gui = ["lightyear_examples_common/gui"]
@@ -20,21 +21,21 @@ visualizer = ["lightyear_examples_common/visualizer", "gui"]
 [dependencies]
 lightyear_examples_common.workspace = true
 lightyear = { workspace = true, features = [
-  "leafwing",
-  "avian3d",
-  "websocket",
+    "leafwing",
+    "avian3d",
+    "websocket",
 ] }
 leafwing-input-manager = { workspace = true, default-features = false, features = [
-  "keyboard",
-  "gamepad",
+    "keyboard",
+    "gamepad",
 ] }
 
 avian3d = { workspace = true, features = [
-  "3d",
-  "f32",
-  "parry-f32",
-  "parallel",
-  "serialize",
+    "3d",
+    "f32",
+    "parry-f32",
+    "parallel",
+    "serialize",
 ] }
 anyhow.workspace = true
 tracing.workspace = true
@@ -44,7 +45,7 @@ bevy.workspace = true
 rand.workspace = true
 metrics-exporter-prometheus = { workspace = true, optional = true }
 bevygap_client_plugin = { workspace = true, optional = true, features = [
-  "matchmaker-tls",
+    "matchmaker-tls",
 ] }
 
 [target."cfg(target_family = \"wasm\")".dependencies]
