--- a/examples/bullet_prespawn/Cargo.toml
+++ b/examples/bullet_prespawn/Cargo.toml
@@ -7,6 +7,7 @@ publish = false
 
 [features]
 default = ["client", "server", "gui", "lightyear_examples_common/default"]
+websocket = ["lightyear_examples_common/websocket"]
 client = ["lightyear_examples_common/client", "gui"]
 server = ["lightyear_examples_common/server"]
 gui = ["lightyear_examples_common/gui"]
@@ -17,10 +18,10 @@ visualizer = ["lightyear_examples_common/visualizer", "gui"]
 [dependencies]
 lightyear_examples_common.workspace = true
 lightyear = { workspace = true, features = [
-  "steam",
-  "websocket",
-  "leafwing",
-  "lz4",
+    "steam",
+    "websocket",
+    "leafwing",
+    "lz4",
 ] }
 
 leafwing-input-manager.workspace = true
