--- a/examples/lobby/Cargo.toml
+++ b/examples/lobby/Cargo.toml
@@ -12,11 +12,12 @@ license = "MIT OR Apache-2.0"
 publish = false
 
 [features]
-default = ["lightyear_examples_common/websocket"]
+default = ["client", "server", "gui", "lightyear_examples_common/default"]
+websocket = ["lightyear_examples_common/websocket"]
 client = [
-  "lightyear_examples_common/server",
-  "lightyear_examples_common/client",
-  "gui",
+    "lightyear_examples_common/server",
+    "lightyear_examples_common/client",
+    "gui",
 ]
 server = ["lightyear_examples_common/server"]
 gui = ["lightyear_examples_common/gui"]
