--- a/examples/lobby/Cargo.toml
+++ b/examples/lobby/Cargo.toml
@@ -12,7 +12,8 @@ license = "MIT OR Apache-2.0"
 publish = false
 
 [features]
-default = ["lightyear_examples_common/websocket"]
+default = ["client", "server", "gui", "lightyear_examples_common/default"]
+websocket = ["lightyear_examples_common/websocket"]
 client = [
   "lightyear_examples_common/server",
   "lightyear_examples_common/client",
