--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [workspace]
 resolver = "2"
 members = [
-    "lightyear",
-    "macros",
-    # internal
-    "benches/*",
-    "examples/*",
+  "lightyear",
+  "lightyear_avian",
+  "macros",
+  # internal
+  "benches/*",
+  "examples/*",
 ]
 default-members = ["lightyear"]
 exclude = ["examples/certificates"]
@@ -39,6 +40,7 @@ debug = false
 
 [workspace.dependencies]
 
+lightyear_avian = { path = "./lightyear_avian", version = "0.18.0", default-features = false }
 lightyear_examples_common = { path = "./examples/common", default-features = false }
 lightyear = { path = "./lightyear", version = "0.18.0", default-features = false }
 
@@ -81,8 +83,8 @@ lightyear_macros = { version = "0.18.0", path = "./macros" }
 tracing = "0.1.40"
 tracing-log = "0.2.0"
 tracing-subscriber = { version = "0.3.17", features = [
-    "registry",
-    "env-filter",
+  "registry",
+  "env-filter",
 ] }
 
 # server
@@ -95,7 +97,7 @@ metrics = "0.24"
 metrics-util = "0.19"
 metrics-tracing-context = "0.18"
 metrics-exporter-prometheus = { version = "0.16", default-features = false, features = [
-    "http-listener",
+  "http-listener",
 ] }
 
 
@@ -110,8 +112,8 @@ futures-util = "0.3.30"
 # we don't need any tokio features, we use only use the tokio channels
 
 tokio = { version = "1.36", features = [
-    "sync",
-    "macros",
+  "sync",
+  "macros",
 ], default-features = false }
 futures = "0.3.30"
 async-compat = "0.2.3"
@@ -121,9 +123,9 @@ async-channel = "2.2.0"
 
 steamworks = "0.11"
 wtransport = { version = "=0.5.0", features = [
-    "quinn",
-    "self-signed",
-    "dangerous-configuration",
+  "quinn",
+  "self-signed",
+  "dangerous-configuration",
 ] }
 tokio-tungstenite = { version = "0.23.0", features = ["connect", "handshake"] }
 
@@ -132,21 +134,21 @@ tokio-tungstenite = { version = "0.23.0", features = ["connect", "handshake"] }
 
 console_error_panic_hook = "0.1.7"
 web-sys = { version = "0.3", features = [
-    "Document",
-    "WebTransport",
-    "WebTransportHash",
-    "WebTransportOptions",
-    "WebTransportBidirectionalStream",
-    "WebTransportSendStream",
-    "WebTransportReceiveStream",
-    "ReadableStreamDefaultReader",
-    "WritableStreamDefaultWriter",
-    "WebTransportDatagramDuplexStream",
-    "WebSocket",
-    "CloseEvent",
-    "ErrorEvent",
-    "MessageEvent",
-    "BinaryType",
+  "Document",
+  "WebTransport",
+  "WebTransportHash",
+  "WebTransportOptions",
+  "WebTransportBidirectionalStream",
+  "WebTransportSendStream",
+  "WebTransportReceiveStream",
+  "ReadableStreamDefaultReader",
+  "WritableStreamDefaultWriter",
+  "WebTransportDatagramDuplexStream",
+  "WebSocket",
+  "CloseEvent",
+  "ErrorEvent",
+  "MessageEvent",
+  "BinaryType",
 ] }
 
 # latest version that still uses bevy 0.14:
@@ -172,19 +174,19 @@ approx = "0.5.1"
 # (we add back features needed for gui clients if desired)
 
 bevy = { version = "0.15", default-features = false, features = [
-    "multi_threaded",
-    "bevy_state",
-    "serialize",
-    "bevy_asset",
-    "bevy_state",
-    "bevy_color",
-    "multi_threaded",
-    "sysinfo_plugin",
+  "multi_threaded",
+  "bevy_state",
+  "serialize",
+  "bevy_asset",
+  "bevy_state",
+  "bevy_color",
+  "multi_threaded",
+  "sysinfo_plugin",
 ] }
 
 # input
 leafwing-input-manager = { version = "0.16", default-features = false, features = [
-    "keyboard",
+  "keyboard",
 ] }
 
 # physics
@@ -195,15 +197,15 @@ avian3d = { version = "0.2", default-features = false }
 # gui debug ui
 # TODO: switch to the released version once inspector upgrades to bevy_egui 0.32
 bevy-inspector-egui = { git = "https://github.com/blip-radar/bevy-inspector-egui.git", branch = "egui-0.30", default-features = false, features = [
-    "bevy_pbr",
-    "bevy_image",
-    "bevy_render",
-    "egui_open_url",
+  "bevy_pbr",
+  "bevy_image",
+  "bevy_render",
+  "egui_open_url",
 ] }
 bevy_egui = { version = "0.32", default-features = false, features = [
-    "open_url",
-    "default_fonts",
-    "render",
+  "open_url",
+  "default_fonts",
+  "render",
 ] }
 bevy_metrics_dashboard = "0.4"
 egui_extras = "0.30"
