--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ chrono = "0.4.38"
 cfg-if = "1.0"
 enum_dispatch = "0.3"
 governor = "0.7.0"
+hashbrown = "0.15"
 nonzero_ext = "0.3.0"
 parking_lot = "0.12.3"
 paste = "1.0"
