--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ nonzero_ext = "0.3.0"
 parking_lot = "0.12.3"
 paste = "1.0"
 rand = "0.8"
+rayon = "1"
 ringbuffer = "0.15"
 thiserror = "2.0.3"
 seahash = "4.1.0"
