--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -121,6 +121,8 @@ async-channel.workspace = true
 
 [target."cfg(not(target_family = \"wasm\"))".dependencies]
 steamworks = { workspace = true, optional = true }
+quinn = { workspace = true, optional = true }
+quinn-proto = { workspace = true, optional = true }
 wtransport = { workspace = true, optional = true }
 tokio-tungstenite = { workspace = true, optional = true }
 zstd = { workspace = true, optional = true }
