--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -16,11 +16,14 @@ publish = true
 [features]
 default = ["std"]
 std = [
+  "bevy/std",
+  # needed for bevy_transform parallel
+  "bevy/async_executor",
   "serde/std",
   "bincode/std",
   "bytes/std",
-  "byteorder/std",
   "chacha20poly1305/std",
+  "no_std_io2/std",
 ]
 trace = []
 metrics = [
@@ -81,7 +84,7 @@ variadics_please.workspace = true
 # no_std
 # TODO: only enable in no_std
 no_std_io2.workspace = true
-
+libc-print.workspace = true
 # input
 leafwing-input-manager = { workspace = true, optional = true }
 
@@ -91,7 +94,6 @@ avian3d = { workspace = true, optional = true }
 
 # serialization
 bincode.workspace = true
-byteorder.workspace = true
 bytes.workspace = true
 self_cell.workspace = true
 serde.workspace = true
