--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -3,7 +3,7 @@ name = "lightyear"
 version.workspace = true
 authors.workspace = true
 rust-version.workspace = true
-edition = "2021"
+edition.workspace = true
 description = "Server-client networking library for the Bevy game engine"
 readme = "../README.md"
 repository = "https://github.com/cBournhonesque/lightyear"
