--- a/lightyear_avian/Cargo.toml
+++ b/lightyear_avian/Cargo.toml
@@ -3,7 +3,7 @@ name = "lightyear_avian"
 version.workspace = true
 authors.workspace = true
 rust-version.workspace = true
-edition = "2021"
+edition.workspace = true
 description = "Helper library to use Lightyear with Avian"
 readme = "../README.md"
 repository = "https://github.com/cBournhonesque/lightyear"
