--- a/lightyear_connection/Cargo.toml
+++ b/lightyear_connection/Cargo.toml
@@ -10,12 +10,12 @@ repository = "https://github.com/cBournhonesque/lightyear"
 
 [features]
 default = ["std"]
-std = ["lightyear_link/std", "lightyear_packet/std"]
+std = ["lightyear_link/std", "lightyear_transport/std"]
 
 [dependencies]
 # local crates
 lightyear_link.workspace = true
-lightyear_packet.workspace = true
+lightyear_transport.workspace = true
 lightyear_serde.workspace = true
 
 # bevy
