--- a/lightyear_messages/Cargo.toml
+++ b/lightyear_messages/Cargo.toml
@@ -21,7 +21,7 @@ lightyear_utils.workspace = true
 lightyear_serde.workspace = true
 lightyear_connection.workspace = true
 lightyear_core.workspace = true
-lightyear_packet.workspace = true
+lightyear_transport.workspace = true
 
 # utils
 tracing.workspace = true
