--- a/lightyear_netcode/Cargo.toml
+++ b/lightyear_netcode/Cargo.toml
@@ -12,7 +12,7 @@ repository = "https://github.com/cBournhonesque/lightyear"
 default = ["std"]
 std = [
     "lightyear_link/std",
-    "lightyear_packet/std",
+    "lightyear_transport/std",
     "lightyear_serde/std",
     "no_std_io2/std",
       "bytes/std",
@@ -24,7 +24,7 @@ std = [
 lightyear_connection.workspace = true
 lightyear_core.workspace = true
 lightyear_link.workspace = true
-lightyear_packet.workspace = true
+lightyear_transport.workspace = true
 lightyear_serde.workspace = true
 lightyear_utils.workspace = true
 
