--- a/lightyear_steam/Cargo.toml
+++ b/lightyear_steam/Cargo.toml
@@ -12,7 +12,7 @@ repository = "https://github.com/cBournhonesque/lightyear"
 default = ["std"]
 std = [
     "lightyear_link/std",
-    "lightyear_packet/std",
+    "lightyear_transport/std",
     "no_std_io2/std",
     "bytes/std",
     "chacha20poly1305/std",
@@ -23,7 +23,7 @@ std = [
 lightyear_connection.workspace = true
 lightyear_core.workspace = true
 lightyear_link.workspace = true
-lightyear_packet.workspace = true
+lightyear_transport.workspace = true
 lightyear_serde.workspace = true
 lightyear_utils.workspace = true
 
