get lightyear_messages test to compile

--- a/lightyear_messages/Cargo.toml
+++ b/lightyear_messages/Cargo.toml
@@ -39,5 +39,10 @@ bytes.workspace = true
 # bevy
 bevy.workspace = true
 
+[dev-dependencies]
+lightyear_link.workspace = true
+lightyear_macros.workspace = true
+lightyear_transport = {workspace = true, features = ["test_utils"]}
+
 [lints]
 workspace = true
