improve core TickDelta, TimeDelta, etc.

--- a/lightyear_client/Cargo.toml
+++ b/lightyear_client/Cargo.toml
@@ -23,6 +23,7 @@ lightyear_serde.workspace = true
 lightyear_core.workspace = true
 lightyear_messages.workspace = true
 lightyear_transport.workspace = true
+lightyear_sync = { workspace = true, features = ["client"] }
 
 # utils
 tracing.workspace = true
