--- a/lightyear_core/Cargo.toml
+++ b/lightyear_core/Cargo.toml
@@ -21,6 +21,7 @@ lightyear_serde.workspace = true
 
 # utils
 chrono.workspace = true
+numquant.workspace = true
 paste.workspace = true
 parking_lot.workspace = true
 tracing.workspace = true
@@ -33,6 +34,9 @@ serde.workspace = true
 
 # no_std
 spin = { workspace = true, features = ["rwlock"] }
+
+[dev-dependencies]
+approx.workspace = true
 
 [lints]
 workspace = true
