--- a/Cargo.toml
+++ b/Cargo.toml
@@ -92,6 +92,7 @@ enum_dispatch = "0.3"
 governor = "0.8.1"
 hashbrown = "0.15"
 nonzero_ext = "0.3.0"
+numquant = { version = "0.2.0", features = ["serde"] }
 parking_lot = "0.12.3"
 paste = "1.0"
 rand = "0.9"
@@ -206,7 +207,6 @@ wasm-bindgen = "0.2.90"
 wasm-bindgen-futures = "0.4.42"
 
 # dev deps
-
 wasm-bindgen-test = "0.3.39"
 mock_instant = "0.5"
 bitvec = "1.0"
